# hearthlight

./: .gitignore  .gitignore (1)  .gitmodules  CHANGELOG.md  README (1).md  README.md  TODO.md  docker-compose.yaml  example.env  pyproject.toml  requirements-mlx.txt  systemd.sh  todo.txt
.playwright-cli/: page-2026-05-19T14-44-57-930Z.yml  page-2026-05-19T14-45-10-775Z.yml  page-2026-05-19T14-45-24-864Z.yml  page-2026-05-19T14-45-35-909Z.yml  page-2026-05-19T14-45-38-431Z.yml
anomaly/: Dockerfile  adapters.py  main.py  output_threads.py  requirements.txt
association/: Dockerfile  incident_classes.py  main.py  manager_classes.py  object_classes.py  output_threads.py  requirements.txt
deploy/: README.md
docs/: architecture.md  containers.md  demo_trigger_connectors.md  initialization.md  macos_dmg.md  repository.md  security.md  testing.md
exporter/: main.py  requirements.txt
frontend/: babel.config.cjs  index.html  jest.config.cjs  package-lock.json  package.json  playwright.config.js  vite.config.js
hearthlight/: __init__.py  cli.py  helper_cli.py  local_reid_passthrough.py  local_workers.py  macos_app.py  onboarding.py  runtime.py  workspace.py
ingestor/: Dockerfile  input_media.py  main.py  output_threads.py  requirements.txt
rabbitmq/: Dockerfile  init.sh
reid/: Dockerfile  journey.py  loitering.py  main.py  output_threads.py  poi.py  requirements.txt
run/: README.md  docker-compose.cuda.yaml  gui_launcher.py  launcher.py  run.py  run.sh  run_delos.desktop  run_hearthlight.desktop
scripts/: build_macos_app.sh  container_preflight.py  onboard.sh  (+8 more)
(+214 files in other folders)
