[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hearthlight"
version = "0.1.0"
description = "Hearthlight CLI management tool"
requires-python = ">=3.10"

[project.scripts]
hearthlight = "hearthlight.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hearthlight*", "run*", "shared*"]
