[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hearthlight"
version = "0.8.2"
description = "Hearthlight bootstrap and runtime CLI"
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
macos-app = ["pyinstaller>=6.0"]

[project.scripts]
hearthlight = "hearthlight.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hearthlight*", "run*", "shared*"]
